src/objects/Refund_Request__c.object
<CustomObject>
    <description>Table to hold refund requests submitted by the PECs</description>
    <fields>
        <fullName>Amount_of_Refund__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The dollar amount we will be refunding the patient</description>
        <label>Amount of Refund</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Carecredit_Account__c</fullName>
        <description>The carecredit account # for the patient.  This field will be prompted for if the patient made any payments via carecredit</description>
        <label>Carecredit Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City the refund check will be mailed to.  Only asked for if the patient made any payments via cash or check.</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_approved_PE_refund__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the doctor has approved the prosth exam fee.  This will be asked for if the refund is for the full amount.</description>
        <label>Doctor approved PE refund?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finished_Time__c</fullName>
        <formula>Refund_Completed_Date__c</formula>
        <label>Finished Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Refund Requests</relationshipLabel>
        <relationshipName>Refund_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PE_call_date__c</fullName>
        <description>date the patient called the refund team about the PE fee</description>
        <label>PE call date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_called_about_PE_fee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the refund team had a call from the patient about the PE fee.</description>
        <label>Patient called about PE fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Zip code the check will be mailed to.  Asked for if the patient ever paid with cash or check.</description>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Practice_Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Private Practice Patient</label>
        <referenceTo>Private_Practice_Patient__c</referenceTo>
        <relationshipLabel>Refund Requests</relationshipLabel>
        <relationshipName>Refund_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_request__c</fullName>
        <description>The reason the pec is submitting the request</description>
        <label>Reason for request</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Refund_Completed_Date__c</fullName>
        <description>Date the refund request was completed</description>
        <label>Refund Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Refund_Status__c</fullName>
        <label>Refund Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                    <default>true</default>
                    <label>Incomplete</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Waiting on Release/Addendum</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Type__c</fullName>
        <label>Refund Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Refund</fullName>
                </value>
                <value>
                    <fullName>Partial Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <formula>Text(Refund_Status__c)</formula>
        <label>Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <formula>Text( Refund_Type__c )</formula>
        <label>Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spoke_to_RBD_Doctor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PEC acknowledgement that they have spoken to the doctor and RBD.  Required to submit a refund.</description>
        <label>Spoke to RBD &amp; Doctor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Springstone_Account__c</fullName>
        <description>Currently not in use.</description>
        <label>Springstone Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Street address the refund check will be mailed to.  Required if the patient made any payments by check or cash.</description>
        <label>Street Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Refund Request</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Refund Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refund Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>